--- a/WingDroid/app/src/main/res/layout/actv_main.xml
+++ b/WingDroid/app/src/main/res/layout/actv_main.xml
@@ -6,9 +6,17 @@
     android:layout_height="match_parent"
     tools:context="com.example.choijinjoo.wingdroid.ui.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
+        style="@style/Theme.TabLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        app:tabMode="scrollable" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/tabLayout" />
 
 </RelativeLayout>
