--- a/WingDroid/app/src/main/res/layout/frag_search_result.xml
+++ b/WingDroid/app/src/main/res/layout/frag_search_result.xml
@@ -3,40 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/containerSearchs"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recvResults"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="10dp">
+        android:layout_height="match_parent" />
 
-
-        <TextView
-            style="@style/TextStyle.Title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/recent_searchs" />
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recvSearchs"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/containerSuggestions"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:visibility="gone">
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recvSuggestions"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
 </RelativeLayout>
 
