--- a/WingDroid/app/src/main/res/layout/actv_main.xml
+++ b/WingDroid/app/src/main/res/layout/actv_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context="com.example.choijinjoo.wingdroid.ui.MainActivity">
 
-    <android.support.v4.view.ViewPager
+    <com.example.choijinjoo.wingdroid.tools.ScrollDisabledViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
