--- a/WingDroid/app/src/main/res/layout/border.xml
+++ b/WingDroid/app/src/main/res/layout/border.xml
@@ -1,23 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:background="@color/decorate_bd" />
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
     <View
         android:id="@+id/border"
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:layout_below="@+id/recvNews"
-        android:background="@color/decorate_bg" />
-
-    <View
-        android:layout_width="match_parent"
         android:layout_height="0.1dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:background="@color/decorate_bd" />
-</LinearLayout>
+</merge>
