--- a/WingDroid/app/src/main/res/layout/frag_search.xml
+++ b/WingDroid/app/src/main/res/layout/frag_search.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="43dp">
 
-        <android.support.v7.widget.SearchView
+        <SearchView
             android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
@@ -33,13 +33,7 @@
             android:src="@drawable/ic_emoji_monkey" />
     </RelativeLayout>
 
-    <View
-        android:id="@+id/border"
-        android:layout_width="match_parent"
-        android:layout_height="0.1dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:background="@color/decorate_bd" />
+    <include layout="@layout/border" />
 
     <ScrollView
         android:layout_width="match_parent"
