--- a/WingDroid/app/src/main/res/menu/bottom_nav_items.xml
+++ b/WingDroid/app/src/main/res/menu/bottom_nav_items.xml
@@ -5,7 +5,7 @@
         android:id="@+id/nav_feed"
         app:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_home"
         android:title="@string/nav_feed" />
     <item
         android:id="@+id/nav_search"
@@ -16,12 +16,12 @@
         android:id="@+id/nav_news"
         app:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_news"
         android:title="@string/nav_news" />
     <item
         android:id="@+id/nav_bookmark"
         app:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@drawable/ic_search"
+        android:icon="@drawable/ic_bookmark"
         android:title="@string/nav_bookmark" />
 </menu>
