--- a/WingDroid/app/src/main/res/layout/item_tag.xml
+++ b/WingDroid/app/src/main/res/layout/item_tag.xml
@@ -5,6 +5,7 @@
     style="@style/TextStyle.Tag"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginRight="10dp"
     android:gravity="center"
     tools:text="#Simmer" />
 
