--- a/WingDroid/app/src/main/res/layout/item_bookmark.xml
+++ b/WingDroid/app/src/main/res/layout/item_bookmark.xml
@@ -29,13 +29,13 @@
             android:layout_height="wrap_content"
             tools:text="TextSurface" />
 
-        <com.nex3z.flowlayout.FlowLayout
+        <org.apmem.tools.layouts.FlowLayout xmlns:f="http://schemas.android.com/apk/res-auto"
             android:id="@+id/flowLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/txtvName"
-            android:gravity="start|top"
-            app:childSpacing="auto" />
+            android:gravity="fill"
+            f:weightDefault="1.0" />
 
         <include layout="@layout/item_star"/>
 
