--- a/WingDroid/app/src/main/res/layout/frag_search_result.xml
+++ b/WingDroid/app/src/main/res/layout/frag_search_result.xml
@@ -3,6 +3,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <RelativeLayout
+        android:id="@+id/containerEmpty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp"
+        android:gravity="center_horizontal"
+        android:visibility="gone">
+
+        <TextView
+            style="@style/TextStyle.IssueText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/empty_search_result" />
+    </RelativeLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recvResults"
         android:layout_width="match_parent"
