--- a/WingDroid/app/src/main/res/values/styles.xml
+++ b/WingDroid/app/src/main/res/values/styles.xml
@@ -49,16 +49,9 @@
         <item name="android:textColor">@color/grey</item>
     </style>
 
-    <declare-styleable name="FlowLayout">
-        <attr name="android:orientation" />
-        <attr name="layoutDirection" format="enum">
-            <enum name="ltr" value="0"/>
-            <enum name="rtl" value="1"/>
-        </attr>
-        <attr name="debugDraw" format="boolean"/>
-        <attr name="maxLines" format="integer"/>
-        <attr name="weightDefault" format="float" />
-        <attr name="android:gravity"/>
-    </declare-styleable>
+    <style name="TextStyle.IssueText" parent="TextAppearance.AppCompat.Small">
+        <item name="android:textSize">@dimen/textsize_tag</item>
+    </style>
+
 </resources>
 
