--- a/WingDroid/app/src/main/res/layout/frag_bookmark.xml
+++ b/WingDroid/app/src/main/res/layout/frag_bookmark.xml
@@ -8,52 +8,56 @@
         android:layout_height="wrap_content"
         android:scrollbars="none">
 
-
         <RelativeLayout
-            android:id="@+id/containerEmpty"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="30dp"
-            android:gravity="center_horizontal"
-            android:visibility="gone">
+            android:layout_height="match_parent">
 
-            <TextView
-                style="@style/TextStyle.IssueText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/empty_bookmark" />
-        </RelativeLayout>
+            <RelativeLayout
+                android:id="@+id/containerEmpty"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="30dp"
+                android:gravity="center_horizontal"
+                android:visibility="gone">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+                <TextView
+                    style="@style/TextStyle.IssueText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/empty_bookmark" />
+            </RelativeLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:gravity="right"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/imgvFilter"
-                    android:layout_width="@dimen/ic_filter_width"
-                    android:layout_height="@dimen/ic_filter_height"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/ic_filter" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:gravity="right"
+                    android:orientation="horizontal">
 
-                <include layout="@layout/item_sort_criteria" />
+                    <ImageView
+                        android:id="@+id/imgvFilter"
+                        android:layout_width="@dimen/ic_filter_width"
+                        android:layout_height="@dimen/ic_filter_height"
+                        android:layout_marginRight="16dp"
+                        android:layout_marginTop="10dp"
+                        android:src="@drawable/ic_filter" />
 
+                    <include layout="@layout/item_sort_criteria" />
+
+                </LinearLayout>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recvRepositories"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_below="@+id/containerSort" />
             </LinearLayout>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recvRepositories"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/containerSort" />
-        </LinearLayout>
+        </RelativeLayout>
     </ScrollView>
 
 </RelativeLayout>
