--- a/WingDroid/app/src/main/res/layout/item_date.xml
+++ b/WingDroid/app/src/main/res/layout/item_date.xml
@@ -1,28 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/containerStar"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_above="@id/flowLayout"
     android:layout_alignParentRight="true"
-    android:layout_below="@id/flowLayout"
+    android:layout_below="@+id/txtvName"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
-    <ImageView
-        android:layout_width="@dimen/ic_star_width"
-        android:layout_height="@dimen/ic_star_height"
-        android:layout_marginRight="2dp"
-        android:src="@drawable/ic_star"
-        android:tint="@color/grey" />
-
     <TextView
-        android:id="@+id/txtvStar"
+        android:id="@+id/txtvDate"
         style="@style/TextStyle.Star"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="@dimen/textsize_min"
-        tools:text="1.8K" />
+        tools:text="2017.08.14" />
 
 </LinearLayout>
 
