--- a/WingDroid/app/src/main/res/layout/item_repository.xml
+++ b/WingDroid/app/src/main/res/layout/item_repository.xml
@@ -26,10 +26,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/txtvName"
-        f:layoutDirection="ltr"
         android:gravity="fill"
+        f:layoutDirection="ltr"
         f:weightDefault="1.0" />
 
+    <include layout="@layout/item_date" />
 
     <include layout="@layout/item_star" />
 </RelativeLayout>
