--- a/WingDroid/app/src/main/res/layout/item_repository.xml
+++ b/WingDroid/app/src/main/res/layout/item_repository.xml
@@ -25,12 +25,14 @@
         android:id="@+id/flowLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txtvName"
+        android:layout_below="@+id/txtvName"
         android:gravity="fill"
         f:layoutDirection="ltr"
         f:weightDefault="1.0" />
 
-    <include layout="@layout/item_date" />
+
+    <include layout="@layout/item_date" android:id="@+id/containerDate"/>
 
     <include layout="@layout/item_star" />
+
 </RelativeLayout>
