--- a/WingDroid/app/src/main/res/layout/frag_bookmark.xml
+++ b/WingDroid/app/src/main/res/layout/frag_bookmark.xml
@@ -10,7 +10,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <RelativeLayout
                 android:id="@+id/containerEmpty"
@@ -29,12 +29,12 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_alignParentRight="true"
                     android:gravity="right"
                     android:orientation="horizontal">
@@ -54,8 +54,7 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recvRepositories"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@+id/containerSort" />
+                    android:layout_height="match_parent" />
             </LinearLayout>
         </RelativeLayout>
     </ScrollView>
