--- a/WingDroid/app/src/main/res/layout/toolbar_detail.xml
+++ b/WingDroid/app/src/main/res/layout/toolbar_detail.xml
@@ -13,7 +13,7 @@
             android:layout_width="@dimen/ic_toolbar_width"
             android:layout_height="@dimen/ic_toolbar_width"
             android:layout_alignParentRight="true"
-            android:src="@drawable/ic_bookmark" />
+            android:src="@drawable/selector_bookmark" />
 
         <ImageView
             android:id="@+id/imgvShare"
