--- a/WingDroid/app/src/main/res/layout/actv_webview.xml
+++ b/WingDroid/app/src/main/res/layout/actv_webview.xml
@@ -4,10 +4,7 @@
     android:orientation="vertical"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <include layout="@layout/toolbar_back"/>
 
     <WebView
         android:id="@+id/webview"
