--- a/WingDroid/app/src/main/res/layout/frag_search.xml
+++ b/WingDroid/app/src/main/res/layout/frag_search.xml
@@ -10,8 +10,7 @@
         android:layout_height="43dp">
 
         <SearchView
-            android:focusable="false"
-            android:clickable="false"
+            android:id="@+id/searchView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
