--- a/WingDroid/app/src/main/res/layout/actv_github.xml
+++ b/WingDroid/app/src/main/res/layout/actv_github.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.example.choijinjoo.wingdroid.ui.login.GithubActivity">
+    tools:context="com.example.choijinjoo.wingdroid.ui.begin.GithubActivity">
 
     <WebView
         android:id="@+id/webview"
