--- a/WingDroid/app/src/main/res/layout/item_search_history.xml
+++ b/WingDroid/app/src/main/res/layout/item_search_history.xml
@@ -2,32 +2,32 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="36dp"
     android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:layout_height="35dp">
+    android:layout_marginRight="8dp">
 
     <TextView
         android:id="@+id/txtvHistory"
-        android:textColor="@color/grey"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/grey"
+        android:layout_centerVertical="true"
         tools:text="TextSurface" />
 
     <ImageView
         android:id="@+id/imgvDelete"
-        android:layout_width="8dp"
-        android:layout_height="8dp"
-        android:layout_marginRight="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp"
+        android:padding="8dp"
         android:src="@drawable/ic_close" />
 
     <View
-        android:layout_below="@id/txtvHistory"
         android:id="@+id/border"
-        android:layout_marginTop="5dp"
         android:layout_width="match_parent"
         android:layout_height="0.1dp"
+        android:layout_below="@id/imgvDelete"
         android:background="@color/decorate_bd" />
 
 </RelativeLayout>
