Add empty layout

--- a/WingDroid/app/src/main/res/layout/actv_search_result.xml
+++ b/WingDroid/app/src/main/res/layout/actv_search_result.xml
@@ -39,6 +39,16 @@
                     android:layout_height="wrap_content"
                     android:text="@string/recent_searchs" />
 
+                <TextView
+                    android:id="@+id/txtvNoSearchResult"
+                    style="@style/TextStyle.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="20dp"
+                    android:text="@string/empty_search_history"
+                    android:visibility="gone" />
+
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recvHistories"
                     android:layout_width="match_parent"
